<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="sample.github.adamward.githubsample.Fragments.ForumEntry">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="Your Name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pin_text_view"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:text="@string/pin_number"/>
        <EditText
            android:id="@+id/pin_edit_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="#####"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:text="@string/email_address" />
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="example@provider.com"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_forum_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="submit"/>

</LinearLayout>
