<resources>
    <string name="app_name">GithubSample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_message">Welcome to my test app!\n\nThis is the space I use for testing out new android features, libraries, or just other bits of code I find interesting. \n\nThis project is available on GitHub if you wish to check out the source.\n\nYou can also contact me with any questions/feedback via my email.</string>

    <string name="action_info">info</string>

    <string name="email_address">Email Address</string>
    <string name="pin_number">Pin Number</string>
    <string name="name">Name</string>
    <string name="menu_github_issues">Github Issues</string>
    <string name="menu_forum_error_check">Forum Error Check</string>
</resources>
